fix z-index of current time line

--- a/main.css
+++ b/main.css
@@ -99,7 +99,7 @@ h1 {
     border-radius: 1px;
     transition: 0.3s;
     box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.25);
-    z-index: 10;
+    z-index: 200;
 }
 
 #current-time::before {
